# Remove_ROS_VINS

./: .gitignore  README.md  generate.sh  src.kdev4
.kdev4/: src.kdev4
camera_model/: CMakeLists.txt  CMakeLists.txt.new
camera_model/src/camera_models/: PinholeCamera.cc
config/: vins_rviz_config.rviz
config/euroc/: euroc_config.yaml  euroc_config_no_extrinsic.yaml  ex_calib_result.yaml  vins_result.csv
include/: Float32.h  PointStamped  Time.h
vins_estimator/: CMakeLists.txt  package.xml  vins_estimator.kdev4
vins_estimator/.kdev4/: vins_estimator.kdev4
vins_estimator/launch/: euroc.launch
vins_estimator/src/: estimator.cpp  estimator.h  estimator_node.cpp  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h
vins_estimator/src/factor/: imu_factor.h  integration_base.h  marginalization_factor.cpp  marginalization_factor.h  pose_local_parameterization.h  projection_factor.h
vins_estimator/src/feature_tracker/: feature_tracker.cpp  feature_tracker.h  feature_tracker_parameters.cpp  feature_tracker_parameters.h
vins_estimator/src/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_ex_rotation.h  initial_sfm.h  solve_5pts.cpp  solve_5pts.h
vins_estimator/src/loop-closure/: TemplatedLoopDetector.h  demoDetector.h  keyframe.cpp  keyframe.h  keyframe_database.cpp  keyframe_database.h  loop_closure.h
vins_estimator/src/utility/: CameraPoseVisualization.h  utility.h  visualization.cpp  visualization.h
